--- a/package.json
+++ b/package.json
@@ -46,5 +46,6 @@
   "scripts": {
     "start": "./node_modules/.bin/nodemon server.js"
   },
+  "type": "module",
   "license": "(MIT OR Apache-2.0)"
 }
